--- a/src/Mycontent/Skills/_skills.scss
+++ b/src/Mycontent/Skills/_skills.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     margin: 2% 5% 2% 5%;
+    overflow: hidden;
 
     @include Mobile {
         margin: 3% 3% 3% 3%;
