--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -266,6 +266,7 @@
   grid-template-columns: auto 0.6fr;
   margin: 2% 5% 5% 5%;
   padding-top: 5%;
+  overflow: hidden;
 }
 .Head--arb {
   grid-template-columns: 0.5fr auto;
@@ -483,6 +484,7 @@
   display: flex;
   flex-direction: column;
   margin: 2% 5% 2% 5%;
+  overflow: hidden;
 }
 @media (max-width: 425px) {
   .Skill {
@@ -632,6 +634,7 @@
   display: flex;
   flex-direction: column;
   margin: 10% 5% 2% 5%;
+  overflow: hidden;
 }
 @media (max-width: 425px) {
   .Work {
